@@ -46,11 +46,12 @@ from nicos.clients.gui.tools import createToolMenu, startStartupTools
 from nicos.clients.gui.utils import DlgUtils, SettingGroup, dialogFromUi, \
     loadBasicWindowSettings, loadUi, loadUserStyle, splitTunnelString
 from nicos.core.utils import ADMIN
+from nicos.guisupport import typedvalue
 from nicos.guisupport.colors import colors
 from nicos.guisupport.qt import PYQT_VERSION_STR, QT_VERSION_STR, QAction, \
-    QApplication, QColorDialog, QDialog, QFontDialog, QIcon, QLabel, \
-    QMainWindow, QMenu, QMessageBox, QPixmap, QSize, QSystemTrayIcon, Qt, \
-    QTimer, QWebView, pyqtSignal, pyqtSlot
+    QApplication, QColorDialog, QDialog, QDialogButtonBox, QFontDialog, QIcon, \
+    QLabel, QMainWindow, QMenu, QMessageBox, QPixmap, QSize, QSystemTrayIcon, \
+    Qt, QTimer, QWebView, pyqtSignal, pyqtSlot
 from nicos.protocols.daemon import BREAK_NOW, STATUS_IDLE, STATUS_IDLEEXC, \
     STATUS_INBREAK
 from nicos.protocols.daemon.classic import DEFAULT_PORT
@@ -123,7 +124,7 @@ class MainWindow(DlgUtils, QMainWindow):
         # window for displaying errors
         self.errorWindow = None
 
-        # window for "prompt" event confirmation
+        # windows for "prompt" event response
         self.promptWindow = None
 
         # debug console window, if opened
@@ -158,6 +159,7 @@ class MainWindow(DlgUtils, QMainWindow):
         self.client.plugplay.connect(self.on_client_plugplay)
         self.client.watchdog.connect(self.on_client_watchdog)
         self.client.prompt.connect(self.on_client_prompt)
+        self.client.promptdone.connect(self.on_client_promptdone)
 
         # data handling setup
         self.data = DataHandler(self.client)
@@ -517,7 +519,9 @@ class MainWindow(DlgUtils, QMainWindow):
         if self.showtrayicon:
             self.trayIcon.show()
         if self.promptWindow and status != 'paused':
+            # when script continues, any prompts are useless
             self.promptWindow.close()
+            self.promptWindow = None
         # propagate to panels
         for panel in self.panels:
             panel.updateStatus(status, exception)
@@ -637,28 +641,90 @@ class MainWindow(DlgUtils, QMainWindow):
             self.watchdogWindow.show()
 
     def on_client_prompt(self, data):
+        prompt_text = data[0]
+        prev_value = Ellipsis
+        validator = None
+
+        if self.conndata.viewonly:
+            return
+
+        if len(data) == 1:
+            # prompt event from old daemon, without uuid
+            data = (data[0], '')
+        if len(data) >= 4:
+            # it's an input request
+            validator, prev_value = data[2:4]
+        uid = data[1]
+
+        # do we have a prompt open?
         if self.promptWindow:
+            # if it's the same prompt, don't need to do anything
+            if self.promptWindow.prompt_uid == uid:
+                return
             self.promptWindow.close()
 
-        # show non-modal dialog box that prompts the user to continue or abort
-        prompt_text = data[0]
-        dlg = self.promptWindow = QMessageBox(
-            QMessageBox.Icon.Information, 'Confirmation required',
-            prompt_text,
-            QMessageBox.StandardButton.Ok | QMessageBox.StandardButton.Cancel,
-            self)
+        self.promptWindow = dlg = QDialog(self)
+        self.promptWindow.prompt_uid = uid
+        loadUi(dlg, 'dialogs/prompt.ui')
         dlg.setWindowModality(Qt.WindowModality.NonModal)
 
+        if validator is None:
+            dlg.setWindowTitle('Confirmation required')
+        dlg.promptLabel.setText(prompt_text)
+
+        def abort_action():
+            self.client.tell_action('stop', BREAK_NOW)
+            dlg.close()
+            self.promptWindow = None
+
+        def reject_action():
+            dlg.close()
+            self.promptWindow = None
+
+        if validator:
+            prev_value = validator() if prev_value is Ellipsis else prev_value
+            widget = typedvalue.create(dlg, validator, prev_value,
+                                       allow_buttons=False, allow_enter=True)
+            dlg.inputFrame.layout().addWidget(widget)
+
+            def continue_action():
+                try:
+                    value = widget.getValue()
+                except ValueError:
+                    return
+                self.client.eval(f'session.setUserinput({uid!r}, {value!r})')
+                self.client.tell_action('continue')
+                dlg.close()
+
+            widget.valueChosen.connect(continue_action)
+            widget.setFocus()
+
+        else:
+            def continue_action():
+                self.client.tell_action('continue')
+                dlg.close()
+
+            dlg.buttonBox.setFocus()
+
         # give the buttons better descriptions
-        btn = dlg.button(QMessageBox.StandardButton.Cancel)
+        btn = dlg.buttonBox.button(QDialogButtonBox.StandardButton.Discard)
         btn.setText('Abort script')
-        btn.clicked.connect(lambda: self.client.tell_action('stop', BREAK_NOW))
-        btn = dlg.button(QMessageBox.StandardButton.Ok)
-        btn.setText('Continue script')
-        btn.clicked.connect(lambda: self.client.tell_action('continue'))
-        btn.setFocus()
+        btn.clicked.connect(abort_action)
+        btn = dlg.buttonBox.button(QDialogButtonBox.StandardButton.Cancel)
+        btn.setText('Ignore request')
+        btn.clicked.connect(reject_action)
+        btn = dlg.buttonBox.button(QDialogButtonBox.StandardButton.Ok)
+        if not validator:
+            btn.setText('Continue script')
+        btn.clicked.connect(continue_action)
 
         dlg.show()
+        dlg.windowHandle().alert(0)
+
+    def on_client_promptdone(self, data):
+        if self.promptWindow and self.promptWindow.prompt_uid == data[0]:
+            self.promptWindow.close()
+            self.promptWindow = None
 
     def on_trayIcon_activated(self, reason):
         if reason == QSystemTrayIcon.Trigger:
