@@ -38,12 +38,13 @@ DEFAULT_PORT = 1301
 # protocol version, increment this whenever making changes to command
 # arguments or adding new commands
 
-PROTO_VERSION = 23
+PROTO_VERSION = 24
 
 # old versions with which the client is still compatible
 
 # 21 -> 22: added "done" event
 # 22 -> 23: added interval in history queries
+# 23 -> 24: added "promptdone" event
 COMPATIBLE_PROTO_VERSIONS = [23]
 
 # to encode payload lengths as network-order 32-bit unsigned int
