@@ -8,6 +8,10 @@ Release 3.12.0
 
   - Dropped support for TACO devices.
 
+* Commands
+
+  - Added the ``userinput`` command to request input interactively.
+
 
 Release 3.11.0
 --------------
